Center cropped event images + mobile responsivity fix

--- a/www/css/front.less
+++ b/www/css/front.less
@@ -196,9 +196,16 @@ section#main {
     .event-image {
       height: 130px;
       overflow: hidden;
+      position: relative;
       img {
         width: 100%;
         height: auto;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
       }
     }
 
@@ -255,7 +262,7 @@ footer {
 }
 
 // iPhone 5/5S
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 360px) {
   header{
     padding-bottom: 3rem;
     h2 { font-size: 2rem; }
@@ -278,8 +285,9 @@ footer {
   #subscription {
     padding: 0.6rem 0;
 
-    input:first-child {
-      margin-bottom: 0.5rem;
+    input[type=email] {
+      margin-top: 0.2rem;
+      margin-bottom: 0.4rem;
     }
   }
 
